--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,6 +1,8 @@
 {% block header %}
 <h1>{% block title %}----{% endblock %}</h1>
-{% endblock %} {% block content %} {% for cancion in canciones %}
+{% endblock %} {% block content %}
+<h1>lista de musica</h1>
+{% for cancion in canciones %}
 <article class="post">
   <header>
     <div>
