agregamos un style.css al final de la tarea

--- a/music/templates/artista/index.html
+++ b/music/templates/artista/index.html
@@ -1,4 +1,4 @@
-{% block header %}
+{% extends 'base.html' %} {% block header %}
 <h1>{% block title %}----{% endblock %}</h1>
 {% endblock %} {% block content %}
 <h1>lista de artista</h1>
