--- a/music/templates/base.html
+++ b/music/templates/base.html
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Flaskr</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 <nav>
-  <h1>Flaskr</h1>
+  <h1>WEB DE MUSICA</h1>
   <ul>
     <li><a href="{{ url_for('albums.index') }}">albums</a></li>
     <li><a href="{{ url_for('artista.index') }}">artista</a></li>
