--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}----{% endblock %}</h1>
+<h1>{% block title %}lista de music{% endblock %}</h1>
 {% endblock %} {% block content %}
-<h1>lista de musica</h1>
+<h1>musica</h1>
 {% for cancion in canciones %}
 <article class="post">
   <header>
