--- a/music/templates/artista/detalle.html
+++ b/music/templates/artista/detalle.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}Detalle de album{% endblock %}</h1>
+<h1>{% block title %}Detalle del artista{% endblock %}</h1>
 {% endblock %} {% block content %}
-<h1>{{artista['titulo']}} de {{artista['albums']}}</h1>
-<h2>artistas</h2>
+<h1>{{artista['nombre_del_artista']}}</h1>
+<h2>albums</h2>
 <ul>
-  {% for artista in artistas %}
-  <li>{{ artista['albums'] }}</li>
+  {% for album in albums %}
+  <li>{{ album['nombre_del_album'] }}</li>
   {% endfor %}
 </ul>
 {% endblock %}
